xidlc/tests/snapshots/codegen_snapshot__ts-http__http_module_scope.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_module_scope.client.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_module_scope";

import type * as ifaceTypes from "./http_module_scope.iface";
import * as ifaceSchemas from "./http_module_scope.iface.zod";
import { deserialize } from "xidl-typescript-codec";
import {
    appendCookie,
    appendHeader,
    appendParam,
    applyClientAuth,
    applyCookies,
    byteResponseStream,
    buildResponsePayload,
    byteStreamBody,
    decodeOptionalResponseBody,
    decodeResponseBody,
    encodePathCatchAll,
    encodePathSegment,
    encodeRequestBody,
    joinUrl,
    ndjsonBody,
    parseXidlError,
    resolveFetch,
    sseJsonStream,
    type ClientAuth,
    type ClientOptions,
    type FetchLike,
    type HttpCodec,
} from "xidl-typescript-client";

    export namespace nm {
    export class ItemServiceClient {
        private readonly baseUrl: string;
        private readonly fetchImpl: FetchLike;
        private readonly defaultHeaders: Record<string, string>;
        private readonly auth?: ClientAuth;
        private readonly codecs: Record<string, HttpCodec>;

        constructor(baseUrl: string, options: ClientOptions = {}) {
            this.baseUrl = baseUrl;
            this.fetchImpl = resolveFetch(options.fetch);
            this.defaultHeaders = options.headers ?? {};
            this.auth = options.auth;
            this.codecs = options.codecs ?? {};
        }
        
            async get_item(id: string): Promise<types.nm.Item> {
                const parsed = ifaceSchemas.nm.ItemServiceGetItemRequestSchema.parse({ "id": id });
                let path = "/item/{id}";
                path = path.replace("{" + "id" + "}", encodePathSegment(id));
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(path, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    path = `${path}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, path);
                headers.set("Accept", "application/json");
            const resp = await this.fetchImpl(url, { method: "GET", headers });
            if (!resp.ok) {
                throw await parseXidlError(resp);
                
            }
            return await decodeResponseBody<types.nm.Item>(resp, "application/json", this.codecs);
            
        }
        
            async put_item(item: types.nm.Item): Promise<void> {
                const parsed = ifaceSchemas.nm.ItemServicePutItemRequestSchema.parse({ "item": item });
                let path = "/items";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(path, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    path = `${path}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, path);
                const body = { "item": parsed["item"] };
            headers.set("Content-Type", "application/json");
            headers.set("Accept", "");
            const resp = await this.fetchImpl(url, { method: "PUT", headers, body: encodeRequestBody(body, "application/json", this.codecs, ifaceSchemas.nm.ItemServicePutItemRequestSchema) });
            if (!resp.ok) {
                throw await parseXidlError(resp);
                
            }
            return;
            
        }
        
            async get_wrapper(): Promise<types.nm.Wrapper> {
                let path = "/wrapper";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(path, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    path = `${path}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, path);
                headers.set("Accept", "application/json");
            const resp = await this.fetchImpl(url, { method: "GET", headers });
            if (!resp.ok) {
                throw await parseXidlError(resp);
                
            }
            return await decodeResponseBody<types.nm.Wrapper>(resp, "application/json", this.codecs);
            
        }
        
        
    }
}

    export namespace outer {    export namespace inner {
        export class InnerServiceClient {
            private readonly baseUrl: string;
            private readonly fetchImpl: FetchLike;
            private readonly defaultHeaders: Record<string, string>;
            private readonly auth?: ClientAuth;
            private readonly codecs: Record<string, HttpCodec>;

            constructor(baseUrl: string, options: ClientOptions = {}) {
                this.baseUrl = baseUrl;
                this.fetchImpl = resolveFetch(options.fetch);
                this.defaultHeaders = options.headers ?? {};
                this.auth = options.auth;
                this.codecs = options.codecs ?? {};
            }
            
                async get_leaf(): Promise<types.outer.inner.Leaf> {
                    let path = "/leaf";
                    const query = new URLSearchParams();
                    const headers = new Headers(this.defaultHeaders);
                    const cookies: string[] = [];
                    applyCookies(headers, cookies);
                    applyClientAuth(path, query, headers, this.auth, []);
                    const queryString = query.toString();
                    if (queryString.length > 0) {
                        path = `${path}?${queryString}`;
                    }
                    const url = joinUrl(this.baseUrl, path);
                    headers.set("Accept", "application/json");
                const resp = await this.fetchImpl(url, { method: "GET", headers });
                if (!resp.ok) {
                    throw await parseXidlError(resp);
                    
                }
                return await decodeResponseBody<types.outer.inner.Leaf>(resp, "application/json", this.codecs);
                
            }
            
            
        }
    }
}
===============
http_module_scope.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    export namespace nm {

    export interface Item {
            
                id: string;
                    children?: Array<Item>;
                }


    export interface Wrapper {
            
                item: Item;
                }
}

    export namespace outer {    export namespace inner {

        export interface Leaf {
                
                    id: string;
                    }


        export interface Holder {
                
                    leaf: Leaf;
                    }
    }
}

export {};
===============
http_module_scope.iface.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



    import type * as types from "./http_module_scope";


    export namespace nm {

    export interface ItemServiceGetItemRequest {
            id: string;
            }


    export interface ItemServicePutItemRequest {
            item: types.nm.Item;
            }
}

    export namespace outer {    export namespace inner {
    }
}

export {};
===============
http_module_scope.iface.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    import * as models from "./http_module_scope.zod";
    export { models };


    export namespace nm {
    export const ItemServiceGetItemRequestSchema = z.object({
            id: z.coerce.string(),
        });
    export type ItemServiceGetItemRequest = z.infer<typeof ItemServiceGetItemRequestSchema>;

    export const ItemServicePutItemRequestSchema = z.object({
            item: models.nm.ItemSchema,
        });
    export type ItemServicePutItemRequest = z.infer<typeof ItemServicePutItemRequestSchema>;
}

    export namespace outer {    export namespace inner {
    }
}
===============
http_module_scope.server.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_module_scope";

import type * as ifaceTypes from "./http_module_scope.iface";
import * as ifaceSchemas from "./http_module_scope.iface.zod";
import {
    defineOperation,
    type Awaitable,
} from "xidl-typescript-server";

    export namespace nm {
    export interface ItemService {
        
            get_item(id: string): Awaitable<types.nm.Item>;
        
            put_item(item: types.nm.Item): Awaitable<void>;
        
            get_wrapper(): Awaitable<types.nm.Wrapper>;
        
    }

    export const ItemServiceOperations = {
        
            get_item: defineOperation<ItemService, "get_item">({
                handler: "get_item",
                method: "GET",
                path: "/item/{id}",
                paths: ["/item/{id}"],
                request: {
                    kind: "object",
                    args: ["id"],
                    schema: ifaceSchemas.nm.ItemServiceGetItemRequestSchema,
                    path: [{ parameter: "id", wireName: "id", key: "id", multi: false, catchAll: false }],
                    query: [],
                    headers: [],
                    cookies: [],
                    body: {
                        kind: "none",
                        contentType: "",
                        fields: [],
                        
                },
            },
            response: {
                contentType: "application/json",
                bodyMode: "return",
                bodyFields: [{ wireName: "return", key: "return" }],
                headers: [],
                cookies: [],
                stream: false,
                
            },
            security: [],
            
        }),
        
            put_item: defineOperation<ItemService, "put_item">({
                handler: "put_item",
                method: "PUT",
                path: "/items",
                paths: ["/items"],
                request: {
                    kind: "object",
                    args: ["item"],
                    schema: ifaceSchemas.nm.ItemServicePutItemRequestSchema,
                    path: [],
                    query: [],
                    headers: [],
                    cookies: [],
                    body: {
                        kind: "value",
                        contentType: "application/json",
                        fields: [{ wireName: "item", key: "item" }],
                        schema: ifaceSchemas.nm.ItemServicePutItemRequestSchema,
                    
                },
            },
            response: {
                contentType: "",
                bodyMode: "none",
                bodyFields: [],
                headers: [],
                cookies: [],
                stream: false,
                
            },
            security: [],
            
        }),
        
            get_wrapper: defineOperation<ItemService, "get_wrapper">({
                handler: "get_wrapper",
                method: "GET",
                path: "/wrapper",
                paths: ["/wrapper"],
                request: {
                    kind: "none",
                    args: [],
                    path: [],
                    query: [],
                    headers: [],
                    cookies: [],
                    body: {
                        kind: "none",
                        contentType: "",
                        fields: [],
                        
                },
            },
            response: {
                contentType: "application/json",
                bodyMode: "return",
                bodyFields: [{ wireName: "return", key: "return" }],
                headers: [],
                cookies: [],
                stream: false,
                
            },
            security: [],
            
        }),
        
    } as const;
}

    export namespace outer {    export namespace inner {
        export interface InnerService {
            
                get_leaf(): Awaitable<types.outer.inner.Leaf>;
            
        }

        export const InnerServiceOperations = {
            
                get_leaf: defineOperation<InnerService, "get_leaf">({
                    handler: "get_leaf",
                    method: "GET",
                    path: "/leaf",
                    paths: ["/leaf"],
                    request: {
                        kind: "none",
                        args: [],
                        path: [],
                        query: [],
                        headers: [],
                        cookies: [],
                        body: {
                            kind: "none",
                            contentType: "",
                            fields: [],
                            
                    },
                },
                response: {
                    contentType: "application/json",
                    bodyMode: "return",
                    bodyFields: [{ wireName: "return", key: "return" }],
                    headers: [],
                    cookies: [],
                    stream: false,
                    
                },
                security: [],
                
            }),
            
        } as const;
    }
}
===============
http_module_scope.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";

    export namespace nm {
    export const ItemSchema: z.ZodType<import("./http_module_scope").nm.Item> = z.lazy(() => z.object({
        
            id: z.coerce.string(),
        
            children: z.array(ItemSchema).optional()
        
    }));

        export const WrapperSchema = z.object({
            
                item: ItemSchema
            
        });
}

    export namespace outer {    export namespace inner {
            export const LeafSchema = z.object({
                
                    id: z.coerce.string()
                
            });

            export const HolderSchema = z.object({
                
                    leaf: LeafSchema
                
            });
    }
}
