xidlc/tests/snapshots/codegen_snapshot__ts-http__http_query_template.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_query_template.client.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_query_template";

import type * as ifaceTypes from "./http_query_template.iface";
import * as ifaceSchemas from "./http_query_template.iface.zod";
import { z } from "zod";
import { deserialize } from "xidl-typescript-codec";
import {
    appendCookie,
    appendHeader,
    appendParam,
    applyClientAuth,
    applyCookies,
    byteResponseStream,
    buildResponsePayload,
    byteStreamBody,
    decodeOptionalResponseBody,
    decodeResponseBody,
    encodePathCatchAll,
    encodePathSegment,
    encodeRequestBody,
    joinUrl,
    ndjsonBody,
    parseXidlError,
    resolveFetch,
    sseJsonStream,
    type ClientAuth,
    type ClientOptions,
    type FetchLike,
    type HttpCodec,
} from "xidl-typescript-client";

    

    export class HttpQueryTemplateServiceClient {
        private readonly baseUrl: string;
        private readonly fetchImpl: FetchLike;
        private readonly defaultHeaders: Record<string, string>;
        private readonly auth?: ClientAuth;
        private readonly codecs: Record<string, HttpCodec>;

        constructor(baseUrl: string, options: ClientOptions = {}) {
            this.baseUrl = baseUrl;
            this.fetchImpl = resolveFetch(options.fetch);
            this.defaultHeaders = options.headers ?? {};
            this.auth = options.auth;
            this.codecs = options.codecs ?? {};
        }
        
            async get_user(id: number, lang: string, region: string): Promise<string> {
                const parsed = ifaceSchemas.HttpQueryTemplateServiceGetUserRequestSchema.parse({ "id": id, "lang": lang, "region": region });
                let xidlPath = "/users/{id}";
                xidlPath = xidlPath.replace("{" + "id" + "}", encodePathSegment(id));
                const query = new URLSearchParams();
                appendParam(query, "lang", lang, false, false);
                appendParam(query, "region", region, false, false);
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                headers.set("Accept", "text/plain");
        const resp = await this.fetchImpl(url, { method: "GET", headers });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return await decodeResponseBody<string>(resp, "text/plain", this.codecs);
        
    }
    
            async search(keyword: string, payload: string): Promise<string> {
                const parsed = ifaceSchemas.HttpQueryTemplateServiceSearchRequestSchema.parse({ "keyword": keyword, "payload": payload });
                let xidlPath = "/search";
                const query = new URLSearchParams();
                appendParam(query, "keyword", keyword, false, false);
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                const xidlBody = parsed["payload"];
        headers.set("Content-Type", "text/plain");
        
        headers.set("Accept", "text/plain");
        const resp = await this.fetchImpl(url, { method: "POST", headers, body: encodeRequestBody(xidlBody, "text/plain", this.codecs, ifaceSchemas.HttpQueryTemplateServiceSearchRequestSchema) });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return await decodeResponseBody<string>(resp, "text/plain", this.codecs);
        
    }
    
    
}
===============
http_query_template.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



export {};
===============
http_query_template.iface.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.




    

export interface HttpQueryTemplateServiceGetUserRequest {
        id: number;
            lang: string;
            region: string;
        }

    

export interface HttpQueryTemplateServiceSearchRequest {
        keyword: string;
            payload: string;
        }

export {};
===============
http_query_template.iface.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";


    
export const HttpQueryTemplateServiceGetUserRequestSchema = z.object({
        id: z.coerce.number().int().nonnegative(),
        lang: z.coerce.string(),
        region: z.coerce.string(),
    });
export type HttpQueryTemplateServiceGetUserRequest = z.infer<typeof HttpQueryTemplateServiceGetUserRequestSchema>;

    
export const HttpQueryTemplateServiceSearchRequestSchema = z.object({
        keyword: z.coerce.string(),
        payload: z.coerce.string(),
    });
export type HttpQueryTemplateServiceSearchRequest = z.infer<typeof HttpQueryTemplateServiceSearchRequestSchema>;
===============
http_query_template.server.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_query_template";

import type * as ifaceTypes from "./http_query_template.iface";
import * as ifaceSchemas from "./http_query_template.iface.zod";
import {
    defineOperation,
    type Awaitable,
} from "xidl-typescript-server";

    
export interface HttpQueryTemplateService {
    
        get_user(id: number, lang: string, region: string): Awaitable<string>;
    
        search(keyword: string, payload: string): Awaitable<string>;
    
}

export const HttpQueryTemplateServiceOperations = {
    
        get_user: defineOperation<HttpQueryTemplateService, "get_user">({
            handler: "get_user",
            method: "GET",
            path: "/users/{id}",
            paths: ["/users/{id}"],
            request: {
                kind: "object",
                args: ["id", "lang", "region"],
                schema: ifaceSchemas.HttpQueryTemplateServiceGetUserRequestSchema,
                path: [{ parameter: "id", wireName: "id", key: "id", multi: false, catchAll: false }],
                query: [{ wireName: "lang", key: "lang", multi: false }, { wireName: "region", key: "region", multi: false }],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "text/plain",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [],
        
    }),
    
        search: defineOperation<HttpQueryTemplateService, "search">({
            handler: "search",
            method: "POST",
            path: "/search",
            paths: ["/search"],
            request: {
                kind: "object",
                args: ["keyword", "payload"],
                schema: ifaceSchemas.HttpQueryTemplateServiceSearchRequestSchema,
                path: [],
                query: [{ wireName: "keyword", key: "keyword", multi: false }],
                headers: [],
                cookies: [],
                body: {
                    kind: "value",
                    contentType: "text/plain",
                    fields: [{ wireName: "payload", key: "payload" }],
                    singleKey: "payload",
                    schema: ifaceSchemas.HttpQueryTemplateServiceSearchRequestSchema,
                
            },
        },
        response: {
            contentType: "text/plain",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [],
        
    }),
    
} as const;
===============
http_query_template.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";
